feat: github disconnect
